--- a/Mvvn/build.gradle
+++ b/Mvvn/build.gradle
@@ -60,26 +60,33 @@ dependencies {
     api "com.squareup.retrofit2:converter-gson:2.9.0"
     api 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
     api 'me.jessyan:retrofit-url-manager:1.4.0'
-    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
     api 'androidx.multidex:multidex:2.0.1'
 //    api 'com.squareup.okhttp3:logging-interceptor:3.11.0'
-    api 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    api 'com.squareup.okhttp3:logging-interceptor:4.9.3'
     api 'com.gyf.immersionbar:immersionbar:3.0.0'
     api 'com.kaopiz:kprogresshud:1.2.0'
 //    api 'com.kingja.loadsir:loadsir:1.3.8'
-    api 'com.github.bumptech.glide:glide:4.12.0'
+    api 'com.github.bumptech.glide:glide:4.13.1'
     api 'com.github.bumptech.glide:okhttp3-integration:4.12.0'
     api 'me.yokeyword:fragmentationx:1.0.2'
-    api 'com.github.getActivity:XXPermissions:11.6'
-    api 'com.alibaba:fastjson:1.2.62'
-    api 'org.greenrobot:eventbus:3.2.0'
+    api 'com.github.getActivity:XXPermissions:16.2'
+    api 'com.alibaba:fastjson:1.2.69'
+    api 'org.greenrobot:eventbus:3.3.1'
     api 'com.tencent.sonic:sdk:3.1.0'
-    api 'com.qmuiteam:qmui:2.0.0-alpha10'
+    api 'com.qmuiteam:qmui:2.0.1'
     api 'io.github.youth5201314:banner:2.2.2'
     //头条
     api 'me.jessyan:autosize:1.2.1'
     api 'com.github.getActivity:GsonFactory:5.2'
-    api 'io.github.lucksiege:pictureselector:v2.7.3-rc09'
+    // PictureSelector basic (Necessary)
+    api 'io.github.lucksiege:pictureselector:v3.10.7'
+
+    // image compress library (Not necessary)
+    api 'io.github.lucksiege:compress:v3.10.7'
+
+    // uCrop library (Not necessary)
+    api 'io.github.lucksiege:ucrop:v3.10.7'
     api  'com.scwang.smart:refresh-layout-kernel:2.0.3'
     api  'com.scwang.smart:refresh-header-classics:2.0.3'
     api 'com.github.hackware1993:MagicIndicator:1.7.0'
