--- a/Mvvn/build.gradle
+++ b/Mvvn/build.gradle
@@ -62,11 +62,8 @@ dependencies {
     api 'me.jessyan:retrofit-url-manager:1.4.0'
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
     api 'androidx.multidex:multidex:2.0.1'
-//    api 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     api 'com.squareup.okhttp3:logging-interceptor:4.9.3'
     api 'com.gyf.immersionbar:immersionbar:3.0.0'
-    api 'com.kaopiz:kprogresshud:1.2.0'
-//    api 'com.kingja.loadsir:loadsir:1.3.8'
     api 'com.github.bumptech.glide:glide:4.13.1'
     api 'com.github.bumptech.glide:okhttp3-integration:4.12.0'
     api 'me.yokeyword:fragmentationx:1.0.2'
@@ -77,16 +74,16 @@ dependencies {
     api 'com.qmuiteam:qmui:2.0.1'
     api 'io.github.youth5201314:banner:2.2.2'
     //头条
-    api 'me.jessyan:autosize:1.2.1'
+    api 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1'
     api 'com.github.getActivity:GsonFactory:5.2'
     // PictureSelector basic (Necessary)
-    api 'io.github.lucksiege:pictureselector:v3.10.7'
+    api 'io.github.lucksiege:pictureselector:v3.11.0'
 
     // image compress library (Not necessary)
-    api 'io.github.lucksiege:compress:v3.10.7'
+    api 'io.github.lucksiege:compress:v3.10.9'
 
     // uCrop library (Not necessary)
-    api 'io.github.lucksiege:ucrop:v3.10.7'
+    api 'io.github.lucksiege:ucrop:v3.10.9'
     api  'com.scwang.smart:refresh-layout-kernel:2.0.3'
     api  'com.scwang.smart:refresh-header-classics:2.0.3'
     api 'com.github.hackware1993:MagicIndicator:1.7.0'
